--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,20 +31,26 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr style="padding:0px">
             <td style="padding:2.5%;width:60%;vertical-align:middle">
-              <h1>
+              <h1 style="text-align:center">
                 Keertana Chidambaram
               </h1>
-              <p>I am a third-year PhD student in Operations Research at the<a href="https://msande.stanford.edu/"> Department of Management Science and Engineering</a> at <a href="https://www.stanford.edu/">Stanford University</a>. I am a part of the <a href="https://web.stanford.edu/group/scail/">Stanford Causal AI Lab</a> where I am fortunate to be advised by <a href="https://vsyrgkanis.com/">Vasilis Syrgkanis</a>. My research is generously supported by <a href="https://vpge.stanford.edu/fellowships-funding/sgf">the William R. and Sara Hart Kimball Stanford Graduate Fellowship</a>.
-              </p>
-              <p>
-                Previously I received my master’s degree in <a href="https://macss.uchicago.edu/">Computational Social Science</a> (Economics track) from the <a href="https://www.uchicago.edu/en">University of Chicago</a> and my bachelor’s degree in <a href="https://mech.iitm.ac.in/">Mechanical Engineering</a> from the <a href="https://www.iitm.ac.in/">Indian Institute of Technology Madras</a>
-              </p>
               <p style="text-align:center">
                 <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/leonidk">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=GCYG4GoAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/lkeselman"> LinkedIn </a>
               </p>
+              <p>I am a third-year PhD student in Operations Research at the<a href="https://msande.stanford.edu/"> Department of Management Science and Engineering</a> at <a href="https://www.stanford.edu/">Stanford University</a>. I am a part of the <a href="https://web.stanford.edu/group/scail/">Stanford Causal AI Lab</a> where I am fortunate to be advised by <a href="https://vsyrgkanis.com/">Vasilis Syrgkanis</a>. My research is generously supported by <a href="https://vpge.stanford.edu/fellowships-funding/sgf">the William R. and Sara Hart Kimball Stanford Graduate Fellowship</a>.
+              </p>
+              <p>
+                Previously I received my master’s degree in <a href="https://macss.uchicago.edu/">Computational Social Science</a> (Economics track) from the <a href="https://www.uchicago.edu/en">University of Chicago</a> and my bachelor’s degree in <a href="https://mech.iitm.ac.in/">Mechanical Engineering</a> from the <a href="https://www.iitm.ac.in/">Indian Institute of Technology Madras</a>
+              </p>
+<!--               <p style="text-align:center">
+                <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp;
+                <a href="https://github.com/leonidk">GitHub</a> &nbsp;/&nbsp;
+                <a href="https://scholar.google.com/citations?user=GCYG4GoAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
+                <a href="https://www.linkedin.com/in/lkeselman"> LinkedIn </a>
+              </p> -->
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
               <img style="width:100%;max-width:100%" alt="profile photo" src="images/circle_bw_crop.jpg">
