--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,9 @@
     Keertana Chidambaram
   </h1>
   <p style="text-align:center">
-    <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp;
-    <a href="https://github.com/leonidk">GitHub</a> &nbsp;/&nbsp;
-    <a href="https://scholar.google.com/citations?user=GCYG4GoAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
-    <a href="https://www.linkedin.com/in/lkeselman"> LinkedIn </a>
+    vck [at] stanford [dot] edu &nbsp;|&nbsp;
+    <a href="https://github.com/keertanavc">GitHub</a> &nbsp;|&nbsp;
+    <a href="https://scholar.google.com/citations?hl=en&user=ile9Se8AAAAJ">Google Scholar</a> &nbsp;|&nbsp;
   </p>
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tr style="padding:0px">
