--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
     <b>KEERTANA CHIDAMBARAM</b>
   </h1>
   <p style="text-align:center">
-    vck [at] stanford [dot] edu &nbsp;|&nbsp;
+    vck [at] stanford [dot] edu &nbsp;&nbsp; &#8226; &nbsp;&nbsp;
     <a href="https://github.com/keertanavc">GitHub</a> &nbsp;&nbsp; &#8226; &nbsp;&nbsp;
     <a href="https://scholar.google.com/citations?hl=en&user=ile9Se8AAAAJ">Google Scholar</a> &nbsp;&nbsp; &#8226; &nbsp;&nbsp;
   </p>
