--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 
 <body>
   <h1 style="text-align:center">
-    <b>KEERTANA CHIDAMBARAM</b>
+    <b>KEERTANA</b> CHIDAMBARAM
   </h1>
   <p style="text-align:center">
     vck [at] stanford [dot] edu &nbsp;&nbsp; &#8226; &nbsp;&nbsp;
