--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
   <p style="text-align:center">
     vck [at] stanford [dot] edu &nbsp;&nbsp; &#8226; &nbsp;&nbsp;
     <a href="https://github.com/keertanavc">GitHub</a> &nbsp;&nbsp; &#8226; &nbsp;&nbsp;
-    <a href="https://scholar.google.com/citations?hl=en&user=ile9Se8AAAAJ">Google Scholar</a> &nbsp;&nbsp; &#8226; &nbsp;&nbsp;
+    <a href="https://scholar.google.com/citations?hl=en&user=ile9Se8AAAAJ">Google Scholar</a>
   </p>
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tr style="padding:0px">
