--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,8 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Research</h2>
+              <h2>Research Papers</h2>
+              <p><b>*denotes equal contribution</b></p>
             </td>
           </tr>
         </table>
