--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
               </p> -->
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="images/circle_bw_crop.jpg">
+              <img style="width:100%;max-width:100%" alt="profile photo" src="images/keertana.jpg">
             </td>
           </tr>
         </table>
@@ -193,7 +193,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Other Projects</h2>
-              <p> These include coursework, side projects and unpublished research work. 
+              <p> These include coursework, side projects and unpublished research work.
               </p>
             </td>
           </tr>
@@ -270,4 +270,3 @@
 </body>
 
 </html>
-
