--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -259,7 +259,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:center;font-size:small;">
-                Design and source code from <a style="font-size:small;" href="https://jonbarron.info">Jon Barron's website</a>
+                Design and source code from <a style="font-size:small;" href="https://jonbarron.info">Jon Barron's website</a>. Cat icon is from <a href="https://www.flaticon.com/"> Flaticon </a>.
               </p>
             </td>
           </tr>
