--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
               <p style="text-align: justify;">I am a third-year PhD student in Operations Research at the<a href="https://msande.stanford.edu/"> Department of Management Science and Engineering</a> at <a href="https://www.stanford.edu/">Stanford University</a>. I am a part of the <a href="https://web.stanford.edu/group/scail/">Stanford Causal AI Lab</a> where I am fortunate to be advised by <a href="https://vsyrgkanis.com/">Vasilis Syrgkanis</a>. My research is generously supported by <a href="https://vpge.stanford.edu/fellowships-funding/sgf">the William R. and Sara Hart Kimball Stanford Graduate Fellowship</a>.
               </p>
               <p style="text-align: justify;">
-                Previously I received my master’s degree in <a href="https://macss.uchicago.edu/">Computational Social Science</a> (Economics track) from the <a href="https://www.uchicago.edu/en">University of Chicago</a> and my bachelor’s degree in <a href="https://mech.iitm.ac.in/">Mechanical Engineering</a> from the <a href="https://www.iitm.ac.in/">Indian Institute of Technology Madras</a>.
+                Previously, I received my master’s degree in <a href="https://macss.uchicago.edu/">Computational Social Science</a> (Economics track) from the <a href="https://www.uchicago.edu/en">University of Chicago</a> and my bachelor’s degree in <a href="https://mech.iitm.ac.in/">Mechanical Engineering</a> from the <a href="https://www.iitm.ac.in/">Indian Institute of Technology Madras</a>.
               </p>
 <!--               <p style="text-align:center">
                 <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp;
