--- a/style.scss
+++ b/style.scss
@@ -47,7 +47,7 @@ h2 {
   font-weight: normal;
   padding: 0px;
   margin: 0px;
-  display:inline; 
+  display:inline;
 }
 
 h3 {
@@ -57,11 +57,11 @@ h3 {
   font-display: auto;
   padding: 0px;
   margin: 0px;
-  display:inline; 
+  display:inline;
 }
 
 h1 {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 32px;
   font-weight: normal;
   font-display: auto;
