--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,800|Nunito:300,700' rel='stylesheet' type='text/css'>
 
 </head>
 
