--- a/style.scss
+++ b/style.scss
@@ -61,14 +61,15 @@ h3 {
 }
 
 h1 {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Lato', sans-serif;
+  color: #323232;
   font-size: 32px;
   font-weight: normal;
   font-display: auto;
   text-align: center;
   padding: 0px;
-  margin-block-start: 14px;
-  margin-block-end: 14px;
+  margin-block-start: 30px;
+  margin-block-end: 15px;
   margin-left: 0px;
   margin-right: 0px;
 
