--- a/style.scss
+++ b/style.scss
@@ -30,14 +30,16 @@ tr,
 p,
 a {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-display: auto;
+  font-weight: 300;
 }
 
 strong {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-display: auto;
+  font-weight: 300;
 }
 
 h2 {
@@ -52,7 +54,7 @@ h2 {
 
 h3 {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 700;
   font-display: auto;
   padding: 0px;
