--- a/style.scss
+++ b/style.scss
@@ -29,21 +29,24 @@ th,
 tr,
 p,
 a {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  // font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font: 300 16px/1.35 "Lato", Helvetica, sans-serif;
   font-size: 16px;
   font-display: auto;
   font-weight: 300;
 }
 
 strong {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  // font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font: 300 16px/1.35 "Lato", Helvetica, sans-serif;
   font-size: 16px;
   font-display: auto;
   font-weight: 300;
 }
 
 h2 {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  // font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font: 300 16px/1.35 "Lato", Helvetica, sans-serif;
   font-size: 22px;
   font-display: auto;
   font-weight: normal;
@@ -53,7 +56,8 @@ h2 {
 }
 
 h3 {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  // font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font: 300 16px/1.35 "Lato", Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 700;
   font-display: auto;
@@ -63,7 +67,8 @@ h3 {
 }
 
 h1 {
-  font-family: 'Lato', sans-serif;
+  // font-family: 'Lato', sans-serif;
+  font: 300 16px/1.35 "Lato", Helvetica, sans-serif;
   color: #323232;
   font-size: 32px;
   font-weight: normal;
