--- a/style.scss
+++ b/style.scss
@@ -69,7 +69,7 @@ h3 {
 h1 {
   // font-family: 'Lato', sans-serif;
   font: 300 16px/1.35 "Lato", Helvetica, sans-serif;
-  color: #323232;
+  // color: #323232;
   font-size: 32px;
   font-weight: normal;
   font-display: auto;
