--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,10 +88,10 @@
               {{post.authors}}
 
               <br>
-              <em>{{post.venue}}</em>, {{ post.date | date: "%Y" }}
+              <i>{{post.venue}}</i>, {{ post.date | date: "%Y" }}
               <br>
               {% if post.arxiv %}
-              <a href="{{post.arxiv}}">[pdf]</a>
+              <a href="{{post.arxiv}}">[PDF]</a>
               {% endif %}
               {% if post.video %}
               <a href="{{post.video}}">[video]</a>
