--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,28 +87,51 @@
               <br>
               {{post.authors}}
               <br>
-              <i>{{post.venue}}</i>, {{ post.date | date: "%Y" }}
+              <i>{{post.venue1}}</i>, {{ post.date1 | date: "%Y" }}
               <br>
               {% if post.arxiv %}
-              <a href="{{post.arxiv}}">[PDF]</a>
+              <a href="{{post.arxiv1}}">[PDF]</a>
               {% endif %}
               {% if post.video %}
-              <a href="{{post.video}}">[video]</a>
+              <a href="{{post.video1}}">[video]</a>
               {% endif %}
               {% if post.code %}
-              <a href="{{post.code}}">[code]</a>
+              <a href="{{post.code1}}">[code]</a>
               {% endif %}
               {% if post.poster %}
-              <a href="{{post.poster}}">[poster]</a>
+              <a href="{{post.poster1}}">[poster]</a>
               {% endif %}
               {% if post.slides %}
-              <a href="{{post.slides}}">[slides]</a>
+              <a href="{{post.slides1}}">[slides]</a>
               {% endif %}
               {% if post.website %}
-              <a href="{{post.website}}">[website]</a>
+              <a href="{{post.website1}}">[website]</a>
               {% endif %}
               {% if post.youtube %}
-              <a href="{{post.youtube}}">[youtube]</a>
+              <a href="{{post.youtube1}}">[youtube]</a>
+              {% endif %}
+              <i>{{post.venue2}}</i>, {{ post.date2 | date: "%Y" }}
+              <br>
+              {% if post.arxiv %}
+              <a href="{{post.arxiv2}}">[PDF]</a>
+              {% endif %}
+              {% if post.video %}
+              <a href="{{post.video2}}">[video]</a>
+              {% endif %}
+              {% if post.code %}
+              <a href="{{post.code2}}">[code]</a>
+              {% endif %}
+              {% if post.poster %}
+              <a href="{{post.poster2}}">[poster]</a>
+              {% endif %}
+              {% if post.slides %}
+              <a href="{{post.slides2}}">[slides]</a>
+              {% endif %}
+              {% if post.website %}
+              <a href="{{post.website2}}">[website]</a>
+              {% endif %}
+              {% if post.youtube %}
+              <a href="{{post.youtube2}}">[youtube]</a>
               {% endif %}
               <p></p>
               {{ post.excerpt }}
