--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,48 +89,48 @@
               <br>
               <i>{{post.venue1}}</i>, {{ post.date1 | date: "%Y" }}
               <br>
-              {% if post.arxiv %}
+              {% if post.arxiv1 %}
               <a href="{{post.arxiv1}}">[PDF]</a>
               {% endif %}
-              {% if post.video %}
+              {% if post.video1 %}
               <a href="{{post.video1}}">[video]</a>
               {% endif %}
-              {% if post.code %}
+              {% if post.code1 %}
               <a href="{{post.code1}}">[code]</a>
               {% endif %}
-              {% if post.poster %}
+              {% if post.poster1 %}
               <a href="{{post.poster1}}">[poster]</a>
               {% endif %}
-              {% if post.slides %}
+              {% if post.slides1 %}
               <a href="{{post.slides1}}">[slides]</a>
               {% endif %}
-              {% if post.website %}
+              {% if post.website1 %}
               <a href="{{post.website1}}">[website]</a>
               {% endif %}
-              {% if post.youtube %}
+              {% if post.youtube1 %}
               <a href="{{post.youtube1}}">[youtube]</a>
               {% endif %}
-              <i>{{post.venue2}}</i>, {{ post.date2 | date: "%Y" }}
-              <br>
-              {% if post.arxiv %}
+              % if post.venue2 %}
+              <br><i>{{post.venue2}}</i>, {{ post.date2 | date: "%Y" }}<br>
+              {% if post.arxiv2 %}
               <a href="{{post.arxiv2}}">[PDF]</a>
               {% endif %}
-              {% if post.video %}
+              {% if post.video2 %}
               <a href="{{post.video2}}">[video]</a>
               {% endif %}
-              {% if post.code %}
+              {% if post.code2 %}
               <a href="{{post.code2}}">[code]</a>
               {% endif %}
-              {% if post.poster %}
+              {% if post.poster2 %}
               <a href="{{post.poster2}}">[poster]</a>
               {% endif %}
-              {% if post.slides %}
+              {% if post.slides2 %}
               <a href="{{post.slides2}}">[slides]</a>
               {% endif %}
-              {% if post.website %}
+              {% if post.website2 %}
               <a href="{{post.website2}}">[website]</a>
               {% endif %}
-              {% if post.youtube %}
+              {% if post.youtube2 %}
               <a href="{{post.youtube2}}">[youtube]</a>
               {% endif %}
               <p></p>
