--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h3>{{post.title}}</h3>
               <br>
-              {{post.authors}}
+              <!-- {{post.authors}}
               <br>
               <i>{{post.venue1}}</i>, {{ post.date1 | date: "%Y" }}
               <br>
@@ -93,6 +93,13 @@
               <br>
               <i>{{post.venue2}}</i>, {{ post.date2 | date: "%Y" }}
               <br>
+              {% endif %} -->
+              {{ post.authors }}
+              <br>
+              <i>{{ post.venue1 }}</i>, {{ post.date1 | date: "%Y" }}
+              {% if post.venue2 %}
+              <br>
+              <i>{{ post.venue2 }}</i>, {{ post.date2 | date: "%Y" }}
               {% endif %}
               {% if post.arxiv %}
               <a href="{{post.arxiv}}">[PDF]</a>
