--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,9 +84,9 @@
               <br>
               {{ post.authors }}
               <br>
-              <p><i>{{ post.venue1 }}</i></p>
+              <i>{{ post.venue1 }}</i>
               {% if post.venue2 %}
-              <p><i>{{ post.venue2 }}</i></p>
+              <i>{{ post.venue2 }}</i>
               {% endif %}
               <br>
               {% if post.arxiv %}
