--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,9 +84,9 @@
               <br>
               {{ post.authors }}
               <br>
-              <i>{{ post.venue1 }}</i>
+              <i>{{ post.venue1 }}</i>, {{ post.date1 | date: "%Y" }}
               {% if post.venue2 %}
-              <i>{{ post.venue2 }}</i>
+              <i>{{ post.venue2 }}</i>, {{ post.date2 | date: "%Y" }}
               {% endif %}
               <br>
               {% if post.arxiv %}
