--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,7 @@
               {{ post.authors }}
               <br>
               <i>{{ post.venue1 }}</i>, {{ post.date1 | date: "%Y" }}
+              <br>
               {% if post.venue2 %}
               <i>{{ post.venue2 }}</i>, {{ post.date2 | date: "%Y" }}
               {% endif %}
@@ -122,7 +123,7 @@
         <br>
         <br>
 <!--         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-          <tr>
+          <tr> updates
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Intel Projects</h2>
               <p>Besides my work on the RealSense depth sensors and the publications above, a sampling of my publicly disclosed work
