layout space reduction

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,8 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research Papers</h2>
-              <p><b>*denotes equal contribution</b></p>
+              <br>
+              <b>*denotes equal contribution</b>
             </td>
           </tr>
         </table>
@@ -119,9 +120,9 @@
           {% endfor %}
           {% endfor %}
         </table>
+        <!-- <br>
         <br>
-        <br>
-        <br>
+        <br> -->
 <!--         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr> updates
             <td style="padding:2.5%;width:100%;vertical-align:middle">
