--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
                 <a href="https://www.linkedin.com/in/lkeselman"> LinkedIn </a>
               </p> -->
             </td>
-            <td style="padding:2.5%;width:40%;max-width:40%">
+            <td style="padding:1% 2.5%;width:100%;vertical-align:middle">
               <img style="width:100%;max-width:100%" alt="profile photo" src="images/keertana.jpeg">
             </td>
           </tr>
@@ -68,7 +68,7 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
-            <td style="padding:2.5%;width:100%;vertical-align:middle">
+            <td style="padding:1% 2.5%;width:100%;vertical-align:middle">
               <h2>Research Papers</h2>
               <br>
               <b>*denotes equal contribution</b>
@@ -80,7 +80,7 @@
           {% for cat in post.categories %}
           {% if cat == 'research' %}
           <tr>
-            <td style="padding:2.5%;width:100%;vertical-align:middle">
+            <td style="padding:1% 2.5%;width:100%;vertical-align:middle">
               <h3>{{post.title}}</h3>
               <br>
               {{ post.authors }}
